--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h3 class="btn btn-default heading"> Image Recognition</h3>
       <br><br>
 
-      <button id="Evert!" src="">Chat 💻📱</button>
+      <button id="Evert!" src="https://aadya-ai.github.io/TechBit-Chat/">Chat 💻📱</button>
 
       <p style="font-size: 22px;">Model is trained to identify the following objects: </p>
 
